--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "dev:rm": "rm -rf .nuxt && nuxt dev",
+    "test:unit": "vitest unit",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -17,6 +18,10 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "sass": "^1.80.4"
+    "@nuxt/test-utils": "^3.14.4",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^15.7.4",
+    "sass": "^1.80.4",
+    "vitest": "^2.1.4"
   }
 }
