--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   },
   "dependencies": {
     "nuxt": "^3.13.2",
-    "postcss-preset-env": "^10.0.8",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/icon": "^1.6.1",
     "@nuxt/test-utils": "^3.14.4",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "@vue/test-utils": "^2.4.6",
+    "daisyui": "^4.12.13",
     "happy-dom": "^15.7.4",
+    "postcss-preset-env": "^10.0.8",
     "sass": "^1.80.4",
     "vitest": "^2.1.4"
   }
