--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@nuxt/test-utils": "^3.14.4",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@vue/test-utils": "^2.4.6",
+    "@vueuse/core": "^11.1.0",
+    "@vueuse/nuxt": "^11.1.0",
     "daisyui": "^4.12.13",
     "happy-dom": "^15.7.4",
     "postcss-preset-env": "^10.0.8",
