--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nuxt dev",
     "dev:rm": "rm -rf .nuxt && nuxt dev",
     "test:unit": "vitest unit",
+    "test:components": "vitest components",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
